# auto-test

./: CMakeLists.txt  funcs.cpp  funcs.h  qwerty
tests/: CMakeLists.txt  tests.cpp
